manifests/postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql
  labels: 
    app: psql 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:      
    metadata:
      labels:
        app: psql
      annotations:
        sidecar.istio.io/inject: "false"        
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432 
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgdatavol
      volumes:
        - name: pgdatavol
          persistentVolumeClaim:
            claimName: psql

---
apiVersion: v1
kind: Service
metadata:
  name: psql
spec:
  type: NodePort
  selector:
    app: psql
  ports:
    - name: psql
      port: 5432        # Cluster_IP:port
      nodePort: 30100   # Node_IP:nodePort 
      protocol: TCP
